--- a/work.html
+++ b/work.html
@@ -72,13 +72,44 @@
         </button>
 
         <!-- Menu Items -->
+
         <ul class="text-center leading-[2.5rem]">
-            <li class="mt-2"><a href="/index.html">H O M E</a></li>
-            <li class="mt-2"><a href="/work.html" class="font-bold text-blue-900">W O R K</a></li>
-            <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
-            <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
-            <li class="mt-2"><a href="/team.html">T E A M</a></li>
-            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
+            <li class="mt-2 pb-3">
+                <a href="/index.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    H O M E
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/work.html"
+                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    W O R K
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/aboutus.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    A B O U T
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/service.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    S E R V I C E S
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/team.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    T E A M
+                </a>
+            </li>
+            <li class="mt-2 pb-3">
+                <a href="/contactus.html"
+                    class="text-2xl font-thin transition-transform duration-500 ease-out hover:scale-125 hover:font-bold font-normal block">
+                    C O N T A C T
+                </a>
+            </li>
         </ul>
     </div>
 
