--- a/aboutus.html
+++ b/aboutus.html
@@ -119,7 +119,8 @@
         </div>
     </section>
     <!--Bento section 1-->
-    <section id="about-content" class="min-h-screen relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed">
+    <section id="about-content"
+        class="min-h-screen relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed">
         <!-- First Section -->
         <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
             <!-- Yellow Accent Blocks - Hidden on small screens -->
@@ -291,8 +292,7 @@
                     <!-- Second Row: Button & Social Media Icons -->
                     <div
                         class="flex flex-col sm:flex-row justify-between items-center w-full space-y-8 mt-8 sm:space-y-0">
-                        <button
-                        id="shareButton"
+                        <button id="shareButton"
                             class="bg-pink-500 border border-white px-6 py-3 text-lg text-white font-semibold flex items-center gap-2">
                             <img src="/footer-png/share-button.png" alt="Share Icon" class="w-6 h-6"> Share this Website
                         </button>
@@ -324,6 +324,14 @@
 
         </div>
     </section>
+    
+    <!-- loader -->
+    <div id="loader"
+        class="fixed inset-0 bg-white flex items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
+        <img id="logo-img" src="/MIW_Website_Assets/loader_horse.gif" alt="loader" class="w-16 h-16 object-contain">
+    </div>
+    <!--loader end  -->
+    
     <script>
         const menuBtn = document.getElementById('menu-btn');
         const closeMenuBtn = document.getElementById('close-menu');
@@ -365,6 +373,11 @@
         });
     </script>
     <script>
+        document.addEventListener("readystatechange", () => {
+            if (document.readyState === "complete") {
+                document.getElementById("loader").classList.add("hidden");
+            }
+        });
         document.getElementById("shareButton").addEventListener("click", async () => {
             if (navigator.share) {
                 await navigator.share({
@@ -435,7 +448,7 @@
                 if (currentSection.id === 'about-banner') {
                     logo.style.filter = "invert(1)";
                     menuIcon.style.filter = "invert(1)";
-                }else if (currentSection.id === 'about-content') {
+                } else if (currentSection.id === 'about-content') {
                     logo.style.filter = "invert(90%)";
                     menuIcon.style.filter = "invert(90%)";
                 } else {
