--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                 alt="Quote Top">
                             <!-- Left text -->
                             <div
-                                class="container mx-auto px-4 h-full flex flex-col 
+                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
                     md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4">
                                     <h2 class="text-xl sm:text-2xl md:text-4xl font-bold text-black">Ipsum suspendisse
@@ -487,7 +487,7 @@
                                 class="absolute top-10 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block"
                                 alt="Quote Top">
                             <div
-                                class="container mx-auto px-4 h-full flex flex-col 
+                                class="container mx-auto px-4 h-full flex flex-col  pt-8 sm:pt-0
                          md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4">
                                     <h2 class="text-xl sm:text-2xl md:text-4xl font-bold text-black">Ipsum suspendisse
@@ -519,7 +519,7 @@
                                 class="absolute top-10 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block"
                                 alt="Quote Top">
                             <div
-                                class="container mx-auto px-4 h-full flex flex-col 
+                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
                            md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4">
                                     <h2 class="text-xl sm:text-2xl md:text-4xl font-bold text-black">Ipsum suspendisse
@@ -551,7 +551,7 @@
                                 class="absolute top-10 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block"
                                 alt="Quote Top">
                             <div
-                                class="container mx-auto px-4 h-full flex flex-col 
+                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
                            md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4">
                                     <h2 class="text-xl sm:text-2xl md:text-4xl font-bold text-black">Ipsum suspendisse
@@ -583,7 +583,7 @@
                                 class="absolute top-10 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block"
                                 alt="Quote Top">
                             <div
-                                class="container mx-auto px-4 h-full flex flex-col 
+                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
                            md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4">
                                     <h2 class="text-xl sm:text-2xl md:text-4xl font-bold text-black">Ipsum suspendisse
