mobile card for contact fit to screen

--- a/contactus.html
+++ b/contactus.html
@@ -103,7 +103,7 @@
 
             <div class="md:w-1/2 flex items-center px-10 pt-4 pb-0 sm:py-6 md:px-12 md:py-24 xl:px-16 xl:py-32 justify-center border-b-2 border-dotted border-gray-400 sm:border-0"
                 style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
-                <div id="image-container" class="relative w-full max-w-md aspect-[1/1.8]">
+                <div id="image-container" class="relative w-full max-w-md aspect-[1.4/1.1] sm:aspect-[1/1.8]">
                     <!-- Background Image (Behind) -->
                     <img id="bg-img" src="/contactpage_assets/Vector_Smart_Object.svg" alt="Background"
                         class="image-to-move absolute top-1 sm:top-3 right-9 sm:right-0 w-[55%] h-[75%] sm:w-[75%] sm:h-full object-contain z-0" />
